web-infras/parser/tests/fixtures/esprima/ES2016/strict-directive/invalid-strict-function-declaration-default-value/output.txt
[SyntaxError]: Illegal 'use strict' directive in function with non-simple parameter list. (1,20)
1|function f(a = 1){ "use strict"; }
 |                  ^
